[gd_scene load_steps=37 format=3 uid="uid://0xayv8fl6nwg"]

[ext_resource type="Script" path="res://World.gd" id="1_3sp02"]
[ext_resource type="Texture2D" uid="uid://dxau0qe7pifey" path="res://128hex2.png" id="2_txj6s"]
[ext_resource type="Resource" uid="uid://c2hke6v38nwqt" path="res://Card/Bolt.tres" id="2_x105y"]
[ext_resource type="Script" path="res://Card.gd" id="3_5057a"]
[ext_resource type="Resource" uid="uid://h1xrpiielu7e" path="res://Card/Basic/Move.tres" id="3_h3v6g"]
[ext_resource type="Texture2D" uid="uid://cx1ndwf034f3e" path="res://128hexselected.png" id="3_suvfm"]
[ext_resource type="Resource" uid="uid://dh51ulp7t0jjm" path="res://Card/Basic/Attack.tres" id="4_ekdss"]
[ext_resource type="Script" path="res://Selected.gd" id="4_we5xg"]
[ext_resource type="Resource" uid="uid://xuxvfjbqubw5" path="res://Card/Basic/Gild.tres" id="5_uma0f"]
[ext_resource type="PackedScene" uid="uid://dvgm864un5mcb" path="res://Unit.tscn" id="6_7be8s"]
[ext_resource type="Script" path="res://Camera2D.gd" id="6_ooqbx"]
[ext_resource type="Shader" path="res://outline.gdshader" id="7_yo3hf"]
[ext_resource type="Texture2D" uid="uid://bsbbxbx2mtem6" path="res://128hexselectedwhite.png" id="8_7dhr4"]
[ext_resource type="Script" path="res://Stats/CharacterStats.gd" id="8_n2v08"]
[ext_resource type="Script" path="res://CardPile.gd" id="8_oudd2"]
[ext_resource type="Resource" uid="uid://qptuoyfga74d" path="res://Card/Vitalize.tres" id="10_snksm"]
[ext_resource type="PackedScene" uid="uid://ddlyn2yh0gvts" path="res://Cursor.tscn" id="11_anjm0"]
[ext_resource type="Resource" uid="uid://bl30c7ws4prq4" path="res://Card/SummonMinion.tres" id="12_pwgfr"]
[ext_resource type="Resource" uid="uid://dwde6tnxw4dic" path="res://Card/Draw.tres" id="13_3ak4n"]
[ext_resource type="Texture2D" uid="uid://den443knsg5mk" path="res://Assets/Cursors/1x/navigation_s.png" id="17_3puf3"]

[sub_resource type="Resource" id="Resource_su6k1"]
script = ExtResource("8_oudd2")
cards = Array[ExtResource("3_5057a")]([ExtResource("3_h3v6g"), ExtResource("4_ekdss"), ExtResource("5_uma0f")])

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_57pog"]
texture = ExtResource("2_txj6s")
texture_region_size = Vector2i(128, 128)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_mhs4w"]
tile_shape = 3
tile_size = Vector2i(111, 128)
sources/0 = SubResource("TileSetAtlasSource_57pog")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_niotj"]
texture = ExtResource("8_7dhr4")
texture_region_size = Vector2i(128, 128)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_8t45q"]
tile_shape = 3
tile_size = Vector2i(111, 128)
sources/0 = SubResource("TileSetAtlasSource_niotj")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_0ogcw"]
texture = ExtResource("3_suvfm")
texture_region_size = Vector2i(128, 128)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_j3ryw"]
tile_shape = 3
tile_size = Vector2i(111, 128)
sources/0 = SubResource("TileSetAtlasSource_0ogcw")

[sub_resource type="CircleShape2D" id="CircleShape2D_wcou8"]
radius = 55.5

[sub_resource type="ShaderMaterial" id="ShaderMaterial_515e0"]
shader = ExtResource("7_yo3hf")
shader_parameter/line_color = Color(1, 1, 1, 1)
shader_parameter/line_thickness = 1.0

[sub_resource type="Resource" id="Resource_i4xkn"]
script = ExtResource("8_oudd2")
cards = Array[ExtResource("3_5057a")]([ExtResource("12_pwgfr"), ExtResource("13_3ak4n"), ExtResource("12_pwgfr"), ExtResource("13_3ak4n"), ExtResource("12_pwgfr"), ExtResource("2_x105y"), ExtResource("12_pwgfr"), ExtResource("2_x105y"), ExtResource("13_3ak4n"), ExtResource("13_3ak4n")])

[sub_resource type="Resource" id="Resource_xxl4d"]
script = ExtResource("8_n2v08")
max_mana = 3
deck = SubResource("Resource_i4xkn")
attack = 2
max_move = 0
max_hp = 3

[sub_resource type="Resource" id="Resource_qpxra"]
script = ExtResource("8_oudd2")
cards = Array[ExtResource("3_5057a")]([ExtResource("2_x105y"), ExtResource("10_snksm"), ExtResource("2_x105y"), ExtResource("10_snksm"), ExtResource("2_x105y"), ExtResource("10_snksm"), ExtResource("2_x105y"), ExtResource("10_snksm")])

[sub_resource type="Resource" id="Resource_u1voy"]
script = ExtResource("8_n2v08")
max_mana = 5
deck = SubResource("Resource_qpxra")
attack = 1
max_move = 0
max_hp = 3

[sub_resource type="CircleShape2D" id="CircleShape2D_xquuo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_go1qt"]
size = Vector2(1156, 576)

[sub_resource type="CircleShape2D" id="CircleShape2D_k20en"]

[node name="World" type="Node2D"]
script = ExtResource("1_3sp02")
spell = ExtResource("2_x105y")
basic_hand_pile = SubResource("Resource_su6k1")

[node name="Line2D" type="Line2D" parent="."]
points = PackedVector2Array(0, 0, 10, 10)

[node name="Label" type="Label" parent="Line2D"]
offset_right = 40.0
offset_bottom = 23.0

[node name="Board" type="TileMap" parent="."]
tile_set = SubResource("TileSet_mhs4w")
format = 2
layer_0/tile_data = PackedInt32Array(-65539, 0, 0, -3, 0, 0, 65534, 0, 0, 131070, 0, 0, 196607, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 65538, 0, 0, 2, 0, 0, 1, 0, 0, 0, 0, 0, -1, 0, 0, -2, 0, 0, 65535, 0, 0, 65536, 0, 0, 65537, 0, 0, 65539, 0, 0, 131076, 0, 0, 131077, 0, 0, -131077, 0, 0, -65541, 0, 0, -5, 0, 0, 65531, 0, 0, 131067, 0, 0, 196603, 0, 0, -131076, 0, 0, -65540, 0, 0, -4, 0, 0, 65532, 0, 0, 131068, 0, 0, 196604, 0, 0, -131075, 0, 0, 65533, 0, 0, 131069, 0, 0, 196605, 0, 0, -131074, 0, 0, -65538, 0, 0, 196606, 0, 0, -131073, 0, 0, -65537, 0, 0, 131071, 0, 0, -196608, 0, 0, -131072, 0, 0, -65536, 0, 0, -196607, 0, 0, -131071, 0, 0, -65535, 0, 0, -196606, 0, 0, -131070, 0, 0, -65534, 0, 0, -196605, 0, 0, -131069, 0, 0, -65533, 0, 0, 3, 0, 0, -196604, 0, 0, -131068, 0, 0, -65532, 0, 0, 4, 0, 0, 65540, 0, 0, -196603, 0, 0, -131067, 0, 0, -65531, 0, 0, 5, 0, 0, 65541, 0, 0, -196613, 0, 0, 65547, 0, 0, -327687, 0, 0, -262151, 0, 0, -196615, 0, 0, -131079, 0, 0, -65543, 0, 0, -7, 0, 0, 65529, 0, 0, 131065, 0, 0, 196601, 0, 0, 262137, 0, 0, 327673, 0, 0, 393209, 0, 0, -327686, 0, 0, -262150, 0, 0, -196614, 0, 0, -131078, 0, 0, -65542, 0, 0, -6, 0, 0, 65530, 0, 0, 131066, 0, 0, 196602, 0, 0, 262138, 0, 0, 327674, 0, 0, 393210, 0, 0, -327685, 0, 0, -262149, 0, 0, 262139, 0, 0, 327675, 0, 0, 393211, 0, 0, -327684, 0, 0, -262148, 0, 0, -196612, 0, 0, 262140, 0, 0, 327676, 0, 0, 393212, 0, 0, -327683, 0, 0, -262147, 0, 0, -196611, 0, 0, 262141, 0, 0, 327677, 0, 0, 393213, 0, 0, -327682, 0, 0, -262146, 0, 0, -196610, 0, 0, 262142, 0, 0, 327678, 0, 0, 393214, 0, 0, -327681, 0, 0, -262145, 0, 0, -196609, 0, 0, 262143, 0, 0, 327679, 0, 0, 393215, 0, 0, -393216, 0, 0, -327680, 0, 0, -262144, 0, 0, 196608, 0, 0, 262144, 0, 0, 327680, 0, 0, -393215, 0, 0, -327679, 0, 0, -262143, 0, 0, 196609, 0, 0, 262145, 0, 0, 327681, 0, 0, -393214, 0, 0, -327678, 0, 0, -262142, 0, 0, 196610, 0, 0, 262146, 0, 0, 327682, 0, 0, -393213, 0, 0, -327677, 0, 0, -262141, 0, 0, 196611, 0, 0, 262147, 0, 0, 327683, 0, 0, -393212, 0, 0, -327676, 0, 0, -262140, 0, 0, 196612, 0, 0, 262148, 0, 0, 327684, 0, 0, -393211, 0, 0, -327675, 0, 0, -262139, 0, 0, 196613, 0, 0, 262149, 0, 0, 327685, 0, 0, -393210, 0, 0, -327674, 0, 0, -262138, 0, 0, -196602, 0, 0, -131066, 0, 0, -65530, 0, 0, 6, 0, 0, 65542, 0, 0, 131078, 0, 0, 196614, 0, 0, 262150, 0, 0, 327686, 0, 0, -393209, 0, 0, -327673, 0, 0, -262137, 0, 0, -196601, 0, 0, -131065, 0, 0, -65529, 0, 0, 7, 0, 0, 65543, 0, 0, 131079, 0, 0, 196615, 0, 0, 262151, 0, 0, 327687, 0, 0, -393208, 0, 0, -327672, 0, 0, -262136, 0, 0, -196600, 0, 0, -131064, 0, 0, -65528, 0, 0, 8, 0, 0, 65544, 0, 0, 131080, 0, 0, 196616, 0, 0, 262152, 0, 0, 327688, 0, 0, -393207, 0, 0, -327671, 0, 0, -262135, 0, 0, -196599, 0, 0, -131063, 0, 0, -65527, 0, 0, 9, 0, 0, 65545, 0, 0, 131081, 0, 0, 196617, 0, 0, 262153, 0, 0, 327689, 0, 0, -393206, 0, 0, -327670, 0, 0, -262134, 0, 0, -196598, 0, 0, -131062, 0, 0, -65526, 0, 0, 10, 0, 0, 65546, 0, 0, 131082, 0, 0, 196618, 0, 0, 262154, 0, 0, 327690, 0, 0, -393205, 0, 0, -327669, 0, 0, -262133, 0, 0, -196597, 0, 0, -131061, 0, 0, -65525, 0, 0, 11, 0, 0, 131083, 0, 0, 196619, 0, 0, 262155, 0, 0, 327691, 0, 0, 589815, 0, 0, 655351, 0, 0, 720887, 0, 0, 589816, 0, 0, 655352, 0, 0, 720888, 0, 0, 589817, 0, 0, 655353, 0, 0, 720889, 0, 0, 589818, 0, 0, 655354, 0, 0, 720890, 0, 0, 589819, 0, 0, 655355, 0, 0, 720891, 0, 0, 589820, 0, 0, 655356, 0, 0, 720892, 0, 0, 589821, 0, 0, 655357, 0, 0, 720893, 0, 0, 589822, 0, 0, 655358, 0, 0, 720894, 0, 0, 589823, 0, 0, 655359, 0, 0, 720895, 0, 0, 524288, 0, 0, 589824, 0, 0, 655360, 0, 0, 524289, 0, 0, 589825, 0, 0, 655361, 0, 0, 524290, 0, 0, 589826, 0, 0, 655362, 0, 0, 524291, 0, 0, 589827, 0, 0, 655363, 0, 0, 524292, 0, 0, 589828, 0, 0, 655364, 0, 0, 524293, 0, 0, 589829, 0, 0, 655365, 0, 0, 524294, 0, 0, 589830, 0, 0, 655366, 0, 0, 524295, 0, 0, 589831, 0, 0, 655367, 0, 0, 524296, 0, 0, 589832, 0, 0, 655368, 0, 0, 524297, 0, 0, 589833, 0, 0, 655369, 0, 0, 524298, 0, 0, 589834, 0, 0, 655370, 0, 0, 524299, 0, 0, 589835, 0, 0, 655371, 0, 0, 524300, 0, 0, 589836, 0, 0, 655372, 0, 0, 524301, 0, 0, 589837, 0, 0, 655373, 0, 0, 524302, 0, 0, 589838, 0, 0, 655374, 0, 0, 524303, 0, 0, 589839, 0, 0, 655375, 0, 0, 458747, 0, 0, 524283, 0, 0, 458748, 0, 0, 524284, 0, 0, 458749, 0, 0, 524285, 0, 0, 458750, 0, 0, 524286, 0, 0, 458751, 0, 0, 524287, 0, 0, 393216, 0, 0, 458752, 0, 0, 393217, 0, 0, 458753, 0, 0, 393218, 0, 0, 458754, 0, 0, 393219, 0, 0, 458755, 0, 0, 393220, 0, 0, 458756, 0, 0, 393221, 0, 0, 458757, 0, 0, 393222, 0, 0, 458758, 0, 0, 393223, 0, 0, 458759, 0, 0, 393224, 0, 0, 458760, 0, 0, 393225, 0, 0, 458761, 0, 0, 393226, 0, 0, 458762, 0, 0, 393227, 0, 0, 458763, 0, 0, 262156, 0, 0, 327692, 0, 0, 393228, 0, 0, 458764, 0, 0, -65522, 0, 0, -65521, 0, 0, -65520, 0, 0, -65519, 0, 0, -65518, 0, 0, -65517, 0, 0, -65516, 0, 0, -65515, 0, 0, -65514, 0, 0, -65513, 0, 0, -65512, 0, 0, -65511, 0, 0, -131046, 0, 0, -131045, 0, 0, -65509, 0, 0, -65508, 0, 0, -131043, 0, 0, -65507, 0, 0, -131042, 0, 0, -131041, 0, 0, -196577, 0, 0, -262112, 0, 0, -262111, 0, 0, -327648, 0, 0, -327647, 0, 0, -393182, 0, 0, -458718, 0, 0, -524253, 0, 0, -589789, 0, 0, -589788, 0, 0, -655323, 0, 0, -720859, 0, 0, -786394, 0, 0, -786393, 0, 0, -851930, 0, 0, -786392, 0, 0, -720856, 0, 0, -655319, 0, 0, -655318, 0, 0, -589782, 0, 0, -524245, 0, 0, -524244, 0, 0, -458708, 0, 0, -393171, 0, 0, -327635, 0, 0, -327634, 0, 0, -262097, 0, 0, -196561, 0, 0, -196560, 0, 0, -131023, 0, 0, -65487, 0, 0, 50, 0, 0, 65586, 0, 0, 131123, 0, 0, 196659, 0, 0, 262196, 0, 0, 327731, 0, 0, 393268, 0, 0, 458804, 0, 0, 524340, 0, 0, 589876, 0, 0, 655412, 0, 0, 720947, 0, 0, 786483, 0, 0, 852019, 0, 0, 917555, 0, 0, 983091, 0, 0, 1048627, 0, 0, 1114162, 0, 0, 1179699, 0, 0, 1179698, 0, 0, 1245233, 0, 0, 1245232, 0, 0, 1310768, 0, 0, 1376303, 0, 0, 1376302, 0, 0, 1441838, 0, 0, 1441837, 0, 0, 1441836, 0, 0, 1507371, 0, 0, 1507370, 0, 0, 1507369, 0, 0, 1507368, 0, 0, 1507367, 0, 0, 1507366, 0, 0, 1572902, 0, 0, 1572901, 0, 0, 1572900, 0, 0, 1572899, 0, 0, 1572898, 0, 0, 1572897, 0, 0, 1572896, 0, 0, 1638431, 0, 0, 65548, 0, 0, 13, 0, 0, 14, 0, 0, -131056, 0, 0, -131055, 0, 0, -131054, 0, 0, -131057, 0, 0, -65523, 0, 0, -65524, 0, 0, -131060, 0, 0, -131059, 0, 0, -131058, 0, 0, 19, 0, 0, 18, 0, 0, 65553, 0, 0, 65552, 0, 0, 65551, 0, 0, 65550, 0, 0, 65549, 0, 0, 1376293, 0, 0, 1376292, 0, 0, 1376291, 0, 0, 1310755, 0, 0, 1310754, 0, 0, 1245217, 0, 0, 1245216, 0, 0, 1245215, 0, 0, 1179679, 0, 0, 1179678, 0, 0, 1114141, 0, 0, 1114140, 0, 0, 1114139, 0, 0, 1048603, 0, 0, 1048602, 0, 0, 983065, 0, 0, 983064, 0, 0, 917528, 0, 0, 917527, 0, 0, 917526, 0, 0, 851989, 0, 0, 851988, 0, 0, 786452, 0, 0, 786451, 0, 0, 786450, 0, 0, 786449, 0, 0, 720912, 0, 0, 720911, 0, 0, 1048604, 0, 0, 983068, 0, 0, 983069, 0, 0, 983070, 0, 0, 983071, 0, 0, 983072, 0, 0, 917537, 0, 0, 917538, 0, 0, 983074, 0, 0, 983075, 0, 0, 917540, 0, 0, 917541, 0, 0, 917542, 0, 0, 917543, 0, 0, 917544, 0, 0, 917545, 0, 0, 917546, 0, 0, 917547, 0, 0, 983083, 0, 0, 983084, 0, 0, 983085, 0, 0, 983086, 0, 0, 1048623, 0, 0, 1048624, 0, 0, 1114160, 0, 0, 1114161, 0, 0, 1245234, 0, 0)

[node name="Targetable" type="TileMap" parent="."]
modulate = Color(1, 1, 1, 0.501961)
tile_set = SubResource("TileSet_8t45q")
format = 2
script = ExtResource("4_we5xg")

[node name="Selected" type="TileMap" parent="."]
modulate = Color(1, 1, 1, 0.266667)
tile_set = SubResource("TileSet_j3ryw")
format = 2
script = ExtResource("4_we5xg")

[node name="Targeter" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Targeter"]
shape = SubResource("CircleShape2D_wcou8")

[node name="Units" type="Node2D" parent="."]

[node name="Player1" parent="Units" instance=ExtResource("6_7be8s")]
material = SubResource("ShaderMaterial_515e0")
position = Vector2(334, 160)
scale = Vector2(0.5, 0.5)
region_rect = Rect2(-8, -8, 144, 144)
stats = SubResource("Resource_xxl4d")

[node name="Player2" parent="Units" instance=ExtResource("6_7be8s")]
position = Vector2(-188, -52)
scale = Vector2(0.5, 0.5)
stats = SubResource("Resource_u1voy")

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_enabled = true
position_smoothing_speed = 10.0
script = ExtResource("6_ooqbx")

[node name="Selected2" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("17_3puf3")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_xquuo")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="AimArea" type="Area2D" parent="CanvasLayer"]
position = Vector2(1000, 650)
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanvasLayer/AimArea"]
position = Vector2(-422, -512)
shape = SubResource("RectangleShape2D_go1qt")

[node name="Cursor" parent="CanvasLayer" instance=ExtResource("11_anjm0")]
z_index = 1

[node name="Area2D" type="Area2D" parent="CanvasLayer/Cursor"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanvasLayer/Cursor/Area2D"]
shape = SubResource("CircleShape2D_k20en")

[node name="BasicHand" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -175.0
offset_right = 383.0
grow_vertical = 0

[node name="Hand" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="TurnInfo" type="Label" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 23.0

[node name="Move" type="Button" parent="CanvasLayer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -56.0
offset_top = -88.0
offset_right = -1.0
offset_bottom = -57.0
grow_horizontal = 0
grow_vertical = 0
text = "MOVE"

[node name="Button" type="Button" parent="CanvasLayer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -90.0
offset_top = -31.0
grow_horizontal = 0
grow_vertical = 0
text = "END TURN"

[node name="CanSelect" type="Sprite2D" parent="CanvasLayer"]

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -185.0
offset_bottom = 204.0
grow_horizontal = 0
text = "this is a combat log?
asdfjkdfsadasfkdfsaj
asdfasdfjhasdf
hasd
fsadfhadfs
ahdfs
jadsfadsfjhdsfaljhds fjdsafjk jkasdhf jksad jkasdf hj safjk fsadjh dsfakj sad fsdafds"
scroll_following = true

[connection signal="area_entered" from="CanvasLayer/Cursor/Area2D" to="CanvasLayer/Cursor" method="_on_area_2d_area_entered"]
[connection signal="pressed" from="CanvasLayer/Move" to="." method="_on_move_pressed"]
[connection signal="pressed" from="CanvasLayer/Button" to="." method="_on_button_pressed"]
